feat: all tests pass

--- a/notebook/generate_names.ipynb
+++ b/notebook/generate_names.ipynb
@@ -33,7 +33,7 @@
     "from train import train \n",
     "\n",
     "# Define the device\n",
-    "device = torch.device(\"cpu\")# torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n"
+    "device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\") # torch.device(\"cpu\")\n"
    ]
   },
   {
@@ -47,9 +47,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Loading and preprocessing data...\n",
+      "First 10 names: ['-maria carmen.', '-antonio.', '-maria.', '-manuel.', '-jose.']\n"
+     ]
+    }
+   ],
    "source": [
     "data_filepath = \"../data/nombres_raw.txt\"  # Replace with your actual file path\n",
     "alphabet = \"abcdefghijklmnopqrstuvwxyz \"\n",
@@ -65,9 +74,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Encoding names...\n",
+      "First 10 encoded names: [[1, 16, 4, 21, 12, 4, 3, 6, 4, 21, 16, 8, 17, 2], [1, 4, 17, 23, 18, 17, 12, 18, 2], [1, 16, 4, 21, 12, 4, 2], [1, 16, 4, 17, 24, 8, 15, 2], [1, 13, 18, 22, 8, 2]]\n",
+      "[22, 8, 21, 10, 12, 18]\n"
+     ]
+    }
+   ],
    "source": [
     "# Initialize tokenizer\n",
     "tokenizer = CharTokenizer(alphabet, start_token=start_token, end_token=end_token)\n",
@@ -75,7 +94,9 @@
     "# Encode names\n",
     "print(\"Encoding names...\")\n",
     "encoded_names = [tokenizer.encode(name) for name in names]\n",
-    "print(\"First 10 encoded names:\", encoded_names[:5])"
+    "print(\"First 10 encoded names:\", encoded_names[:5])\n",
+    "\n",
+    "print(tokenizer.encode('sergio'))"
    ]
   },
   {
@@ -83,16 +104,29 @@
    "metadata": {},
    "source": [
     "- Use the ```CharTokenizer``` to encode your name. What is the result of encoding your name?\n",
-    ">>> Write your name\n",
+    ">>> Sergio\n",
     "\n",
-    ">>> Write your name encoded"
+    ">>> Write your name encoded\n",
+    "[22, 8, 21, 10, 12, 18]\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "First item in batch:\n",
+      "Input: tensor([ 1,  5,  4,  7, 12,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,\n",
+      "         0])\n",
+      "Target: tensor([ 5,  4,  7, 12,  2,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,\n",
+      "         0])\n"
+     ]
+    }
+   ],
    "source": [
     "# Create dataset\n",
     "dataset = NameDataset(encoded_names)\n",
@@ -114,10 +148,10 @@
    "metadata": {},
    "source": [
     "- How can you obtain the target tensor from the input? Does this make sense for an autorregressive prediction such as the one of the Decoder-only model?\n",
-    ">>> Write your answer here\n",
+    ">>> You shift all letters one step to the right, so the model learns to predict the next letter in the sequence. Yes, it makes sense.\n",
     "\n",
     "- What is the tensor value for the start token? And for the end token? And for the padding token?\n",
-    ">>> Write your answer here"
+    ">>> Start token: 1, End token: 2, Padding token: 0"
    ]
   },
   {
@@ -130,9 +164,305 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Initializing model...\n",
+      "Starting training...\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 698/698 [00:24<00:00, 28.50it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch [1/10], Training Loss: 2.4017\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 175/175 [00:03<00:00, 56.26it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch [1/10], Validation Loss: 2.1568\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 698/698 [00:28<00:00, 24.26it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch [2/10], Training Loss: 2.0687\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 175/175 [00:02<00:00, 85.43it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch [2/10], Validation Loss: 1.9937\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 698/698 [00:22<00:00, 31.69it/s] \n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch [3/10], Training Loss: 1.9253\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 175/175 [00:02<00:00, 83.80it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch [3/10], Validation Loss: 1.8756\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 698/698 [00:22<00:00, 30.65it/s] \n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch [4/10], Training Loss: 1.8118\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 175/175 [00:02<00:00, 86.28it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch [4/10], Validation Loss: 1.7766\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 698/698 [00:22<00:00, 31.11it/s] \n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch [5/10], Training Loss: 1.7281\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 175/175 [00:02<00:00, 82.40it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch [5/10], Validation Loss: 1.7092\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 698/698 [00:24<00:00, 28.94it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch [6/10], Training Loss: 1.6669\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 175/175 [00:00<00:00, 201.85it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch [6/10], Validation Loss: 1.6526\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 698/698 [00:23<00:00, 29.73it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch [7/10], Training Loss: 1.6158\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 175/175 [00:01<00:00, 92.55it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch [7/10], Validation Loss: 1.6088\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 698/698 [00:22<00:00, 31.09it/s] \n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch [8/10], Training Loss: 1.5752\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 175/175 [00:02<00:00, 80.64it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch [8/10], Validation Loss: 1.5825\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 698/698 [00:23<00:00, 29.77it/s] \n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch [9/10], Training Loss: 1.5426\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 175/175 [00:02<00:00, 80.47it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch [9/10], Validation Loss: 1.5458\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 698/698 [00:22<00:00, 30.50it/s] \n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch [10/10], Training Loss: 1.5119\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 175/175 [00:01<00:00, 91.11it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch [10/10], Validation Loss: 1.5179\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "# Define training hyper parameters\n",
     "model_save_dir = \"runs\"\n",
@@ -160,6 +490,8 @@
     "    val_dataset, batch_size=batch_size, shuffle=False, collate_fn=collate_fn\n",
     ")\n",
     "\n",
+    "\n",
+    "\n",
     "# Call the train function\n",
     "model = train(\n",
     "    train_loader=train_loader,\n",
@@ -183,7 +515,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -218,41 +550,41 @@
     "    end_token_id = tokenizer.char2idx[end_token]\n",
     "\n",
     "    # TODO: Encode the prefix\n",
-    "    prefix_ids = None\n",
+    "    prefix_ids = tokenizer.encode(prefix.lower()) if prefix else []\n",
     "\n",
     "    # TODO: Initialize the input with the start token and the prefix\n",
-    "    generated_ids = None\n",
+    "    generated_ids = [start_token_id] + prefix_ids\n",
     "\n",
     "    with torch.no_grad():\n",
     "        for _ in range(max_length):\n",
     "            # TODO: Get model predictions\n",
-    "            logits = None\n",
+    "            logits = model(torch.tensor(generated_ids).unsqueeze(0).to(device))\n",
     "            \n",
     "            # TODO: Apply softmax to get probabilities\n",
-    "            next_token_probs = None\n",
+    "            next_token_probs = F.softmax(logits[:, -1, :] / temperature, dim=-1)\n",
     "\n",
     "            # TODO: Sample the next token\n",
-    "            next_token_id = None\n",
+    "            next_token_id = torch.multinomial(next_token_probs, num_samples=1)\n",
     "\n",
     "            # TODO: Append the new token to the sequence\n",
-    "            generated_ids = None\n",
+    "            generated_ids.append(next_token_id.item())\n",
     "\n",
     "            # Stop if end token is generated\n",
     "            if next_token_id.item() == end_token_id:\n",
     "                break\n",
     "\n",
     "    # TODO: Decode the generated token IDs to a string, excluding start and end tokens\n",
-    "    generated_sequence = None\n",
+    "    generated_sequence = tokenizer.decode(generated_ids)\n",
     "\n",
     "    # TODO: Decode the name\n",
-    "    generated_name = None\n",
+    "    generated_name = generated_sequence\n",
     "\n",
     "    return generated_name\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -266,9 +598,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Generated Names:\n",
+      "\n",
+      "-irmac.\n",
+      "-darin.\n",
+      "-luzsobet.\n",
+      "-fermina.\n",
+      "-alfonso victoro.\n"
+     ]
+    }
+   ],
    "source": [
     "# Generate names\n",
     "print(\"Generated Names:\\n\")\n",
@@ -355,9 +701,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Generated Names with temperature=1.5:\n",
+      "\n",
+      "-fuizafota rwea.\n",
+      "-nitolietl.\n",
+      "-justibo.\n",
+      "-rugindraca mariazomo\n",
+      "-thyrine.\n"
+     ]
+    }
+   ],
    "source": [
     "temperature = 1.5  # High randomness\n",
     "print(f\"Generated Names with temperature={temperature}:\\n\")\n",
@@ -376,9 +736,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Generated Names with temperature=0.75:\n",
+      "\n",
+      "-hugo jordes.\n",
+      "-lucas osmara.\n",
+      "-deminia.\n",
+      "-guanalldo.\n",
+      "-julian frahur.\n"
+     ]
+    }
+   ],
    "source": [
     "temperature = 0.75  # Low randomness\n",
     "print(f\"Generated Names with temperature={temperature}:\\n\")\n",
@@ -397,9 +771,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "-zhizand.\n",
+      "-zouk.\n",
+      "-zusane.\n",
+      "-zighen.\n",
+      "-zinnha.\n"
+     ]
+    }
+   ],
    "source": [
     "temperature = 1.0  # Default randomness\n",
     "prefix = \"Z\"  # Prefix to start the names with\n",
@@ -420,7 +806,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "NLP_attention",
+   "display_name": "DL",
    "language": "python",
    "name": "python3"
   },
@@ -434,7 +820,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.5"
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
